--- a/dogcollector_project/dogcollector_app/templates/dogs/base.html
+++ b/dogcollector_project/dogcollector_app/templates/dogs/base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- import style.css file -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- Add Materialize's JavaScript Library --->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
