--- a/dogcollector_project/dogcollector_app/templates/dogs/detail.html
+++ b/dogcollector_project/dogcollector_app/templates/dogs/detail.html
@@ -2,25 +2,71 @@
 {% block content %}
 
 <h1>Dog Details</h1>
-<div class ="card">
-    <div class="card-content">
-        <span class="card-title">{{ dog.name }}</span>
-        <p>Breed: {{dog.breed}}</p>
-        <p>Description: {{dog.description | linebreaks}}</p> 
-        {% if dog.age > 0 %}
-            <p>Age: {{dog.age}}</p>
-        {% else %}
-            <p>Age: Woof!</p>
-        {% endif %} 
-            <p>Gender: {{ dog.gender }}</p>
-            <p>Color: {{ dog.color }}</p>
-            <p>Favorite Toy: {{ dog.favorite_toy }}</p>
+
+<div class="row">
+    <div class="col s6">    
+        <div class ="card">
+            <div class="card-content">
+            <span class="card-title">{{ dog.name }}</span>
+            <p>Breed: {{dog.breed}}</p>
+            <p>Description: {{dog.description | linebreaks}}</p> 
+            {% if dog.age > 0 %}
+                <p>Age: {{dog.age}}</p>
+            {% else %}
+                <p>Age: Woof!</p>
+            {% endif %} 
+                <p>Gender: {{ dog.gender }}</p>
+                <p>Color: {{ dog.color }}</p>
+                <p>Favorite Toy: {{ dog.favorite_toy }}</p>
+            </div>
+            <!-- Update the UI as we need to see EDIT and DELETE links on a cat's detail page.-->
+            <div class="card-action">
+                <a href="{% url 'dogs_update' dog.id %}">Edit</a>
+                <a href="{% url 'dogs_delete' dog.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-    <!-- Update the UI as we need to see EDIT and DELETE links on a cat's detail page.-->
-    <div class="card-action">
-        <a href="{% url 'dogs_update' dog.id %}">Edit</a>
-        <a href="{% url 'dogs_delete' dog.id %}">Delete</a>
-      </div>
+
+    <div class="col s6">
+
+        <form action="{% url 'add_feeding' dog.id %}" method="POST">
+            {% csrf_token %}
+            <!-- Render the inputs -->
+            {{ feeding_form.as_p }}
+            <input type="submit" class="btn" value="Add Feeding">
+        </form>
+
+        <table class="striped">
+            <thead>
+                <tr><th>Date</th><th>Meal</th></tr>
+            </thead>
+        <tbody>
+            {% for feeding in dog.feeding_set.all %}
+                <tr>
+                    <td>{{feeding.date}}</td>
+                    <td>{{feeding.get_meal_display}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+        </table>
+    </div>
 </div>
+
+<script>
+    const dateEl = document.getElementById('id_date');
+    // M is Materialize's global variable
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+
+    // add additional JS to initialize select below
+    const selectEl = document.getElementById('id_meal');
+    M.FormSelect.init(selectEl);
+</script>
+
+
 
 {% endblock %}
