finish part 5 (create many to many relationship, user can see accessories list, add accessories, see accessories belonging to the dog and can add available toys)

--- a/dogcollector_project/dogcollector_app/templates/dogs/base.html
+++ b/dogcollector_project/dogcollector_app/templates/dogs/base.html
@@ -24,9 +24,12 @@
           <!-- all '<a> </a>'' is get request -->
           <!-- update this to use 'url' template tag-->
           <li><a href="{% url 'about' %}">About</a></li>
+
+          <li><a href="{% url 'accessories_index' %}">Accessories</a></li> 
           
           <!-- This is for 'view a form for entering dog info' and 'create the dog when the form is submitted'-->
           <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li> 
+          
 
           <li><a href="{% url 'index' %}">View All My Dogs</a></li>
 
