add nav bar 'home','accessories' + add 'add accessory' button + add cancel button

--- a/dogcollector_project/dogcollector_app/templates/dogcollector_app/accessory_form.html
+++ b/dogcollector_project/dogcollector_app/templates/dogcollector_app/accessory_form.html
@@ -15,5 +15,6 @@
       {{ form.as_table }}
     </table>
     <input type="submit" value="Submit!" class="btn">
+    <a href="{% url 'accessories_index' %}" class="btn grey">Cancel</a>
   </form>
 {% endblock %}
