--- a/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_form.html
+++ b/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_form.html
@@ -21,5 +21,7 @@
             {{ form.as_p }}
         </table>
         <input type="submit" value="Submit" class="btn">
+        <a href="{% url 'index' %}" class="btn gray">Cancel</a>
+
     </form>
 {% endblock %}
