--- a/dogcollector_project/dogcollector_app/templates/dogs/base.html
+++ b/dogcollector_project/dogcollector_app/templates/dogs/base.html
@@ -23,6 +23,8 @@
         <ul class="right">
           <!-- all '<a> </a>'' is get request -->
           <!-- update this to use 'url' template tag-->
+          <li><a href="{% url 'home' %}">Home</a></li>
+
           <li><a href="{% url 'about' %}">About</a></li>
 
           <li><a href="{% url 'accessories_index' %}">Accessories</a></li> 
