finish uploading images to amazon web service S3 + fix delete accessories only in dog(like just remove to available toy, not delete from db)

--- a/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_confirm_delete.html
+++ b/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_confirm_delete.html
@@ -6,7 +6,7 @@
     <h1>Delete Dog</h1>
     <h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
 
-    <!-- form to delete the cat -->
+    <!-- form to delete the dog -->
     <form action="" method="POST">
         <!-- require to add this token for secure -->
         {% csrf_token %}
