--- a/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_form.html
+++ b/dogcollector_project/dogcollector_app/templates/dogcollector_app/dog_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <!-- to show the cat's name only when we are editing, but not creating, a cat -->
+    <!-- to show the dog's name only when we are editing, but not creating, a dog -->
     <!-- if/else block -->
     {% if object %}
         <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
