--- a/dogcollector_project/dogcollector_app/templates/dogs/index.html
+++ b/dogcollector_project/dogcollector_app/templates/dogs/index.html
@@ -5,8 +5,7 @@
 
     {% for dog in dogs %}
     <div class ="card">
-        <!-- Add this single line below for hyperlink-->
-        <!-- #url whos name is detail -->
+        <!-- Add this single line below for hyperlink url whos name is detail-->
         <a href="{% url 'detail' dog.id %}">
         <div class="card-content">
             <span class="card-title">{{ dog.name }}</span>
@@ -21,12 +20,10 @@
                 <p>Color: {{ dog.color }}</p>
                 <p>Favorite Toy: {{ dog.favorite_toy }}</p>
         </div>
-        <!-- Add the following one as well -->
         </a>
     </div>
-
     {% endfor %}
 
 {% endblock %}
 
-<!-- linebreaks allows users to input multiple lines -->
+<!-- NOTE: linebreaks allows users to input multiple lines -->
